# ascii_game

./: .gitmodules  CMakeLists.txt
assets/: colors.lua  draw.lua  keys.lua  test.lua
cmake/: generate.py
cmake/templates/: renderer_factory.hxx.template
include/: common.hxx  renderer_base.hxx  renderer_sdl_cpu.hxx  sdl_input.hxx
plugins/: CMakeLists.txt  template.cmake
plugins/sdl_cpu/: CMakeLists.txt
plugins/sdl_cpu/include/: renderer_sdl_cpu.hxx
src/: color.cxx  main.cxx  renderer_sdl_cpu.cxx  sdl_input.cxx
